# programacion

./: .gitignore  CMakeLists.txt  README.md  main.c  main.c.save  progra1-unlam.cbp  progra1-unlam.cbp.save  progra1-unlam.cscope_file_list  progra1-unlam.layout  progra1-unlam.layout.save  programacion-unlam.cbp  programacion-unlam.depend  programacion-unlam.layout  unlam-programacion-guia.cbp  unlam-programacion-guia.depend  unlam-programacion-guia.layout
core/: boolean.h  fecha.c  fecha.h  main.c  menu.c  menu.h  tp1.c  tp1.h  tp2.c  types.h  utils.h
doc/: notas.md
guia/: main.c
guia/core/: fecha.c  fecha.h  pila_dinamica.c  pila_dinamica.h  pila_estatica.c  pila_estatica.h  tp1.c  tp2.h  types.h  utils.c
guia/tp1/ej14/: tp1_ej14.h
guia/tp1/ej16/: tp1_ej16.h
guia/tp1/ej18/: tp1_ej18.h
guia/tp1/ej2/: tp1_ej2.h
guia/tp1/ej22/: tp1_ej22.h
guia/tp1/ej3/: tp1_ej3.c
guia/tp2/ej1/: tp2_ej1.c
guia/tp2/ej13/: tp2_ej13.c
guia/tp2/ej9/: tp2_ej9.c
parciales/ea1/: datos.txt  funciones.c  funciones.h  main.c  main.h  nuevo.txt
parciales/ea2-c/: funciones.c  funciones.h  main.c  main.h  original.txt
parciales/ea2-cpp/: Pantalla.txt  Prisma.cpp  Prisma.h  main.cpp  main.h
parciales/ea2r-c/: .gitignore  funciones.c  funciones.h  main.c  main.h  pantallaESPERABLE.txt
parciales/ea3-c/: funciones.c  funciones.h  main.c  main.h  pantalla.txt
parciales/ea3-cpp/: Cuadrado.cpp  Cuadrado.h  Figura.cpp  Figura.h  FiguraInvalidaException.h  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h  main.cpp
tda/cola/: cola_dinamica.c  cola_dinamica.h  cola_estatica.c  cola_estatica.h
tda/lista/: lista_doble.c  lista_doble.h  lista_simple.c  lista_simple.h
tda/pila/: pila.h  pila_dinamica.c  pila_dinamica.h  pila_estatica.c  pila_estatica.h
tp1/ej1/: tp1_ej1.c  tp1_ej1.h
tp1/ej14/: tp1_ej14.c
tp1/ej15/: tp1_ej15.c  tp1_ej15.h
tp1/ej16/: tp1_ej16.c
tp1/ej17/: tp1_ej17.c  tp1_ej17.h
tp1/ej18/: tp1_ej18.c
tp1/ej2/: tp1_ej2.c
tp1/ej22/: tp1_ej22.c
tp1/ej3/: tp1_ej3.c  tp1_ej3.h
tp1/ej4/: tp1_ej4.c  tp1_ej4.h
tp2/ej1/: tp2_ej1.h
tp2/ej13/: empleados  empleados.tmp  estudiantes  tp2_ej13.c  tp2_ej13.h
tp2/ej9/: tp2_ej9.c  tp2_ej9.h
